# MetalDock

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  metal_dock  metaldock  pyproject.toml  setup.cfg
GA_dock_test_set/: docking.py  environment_variables.py  input_variables.py  main.py  variable_class.py
GA_dock_train_set/: docking.py  environment_variables.py  input_variables.py  main.py  variable_class.py
GA_lib/: environment_variables.py  main.py  variable_class.py
GA_lib_min/: docking.py  main.py
GA_lib_parallel/: .derivative.py.swp  environment_variables.py  input_variables.py  main.py  variable_class.py
MetalDocs/: mkdocs.yml
MetalDocs/docs/: index.md
autodock_metal/: docking.py  environment_variables.py  input_variables.py  main.py  pdb_extraction.py  quantum_calculation.py  variable_class.py
autodock_metal_lib/: densf.sh  docking.py  environment_variables.py  espfit.py  input_variables.py  main.py  pdb_extraction.py  quantum_calculation.py  resp_charges.py  variable_class.py
autodock_test_set/: docking.py  environment_variables.py  input_variables.py  main.py  variable_class.py  vdw_surface.py
docs/: mkdocs.yml
docs/docs/: index.md  input_parameters.md  installation.md  output.md  run.md
examples/example_ini_files/: orca_input.ini
input_examples/: adf_input.ini  gaussian_input.ini  mc_input.ini  orca_input.ini
src/: adf_engine.py  calculate_rmsd.py  docking.py  environment_variables.py  figures.py  gaussian_engine.py  optim.py  parser.py  pdb_extraction.py  prepare_dock.py  train_GA.py
src/MetalDock_MatthijsHak.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/metal_dock/: adf_engine.py  (+22 more)
(+606 files in other folders)
