[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MetalDock_MatthijsHak"
version = "1.0.0"
authors = [
          { name = "Matthijs Hakkennes", email = "m.l.a.hakkennes@lic.leidenuniv.nl" },
          ]
description = "Package to dock metal-organic complexes to biomolecules"
readme = "README.md"
requires-python = ">=3.7.12"
classifiers = [
              "Programming Language :: Python :: 3",
              "License :: OSI Approved :: MIT License", 
              "Operating System :: POSIX :: Linux",
              "Operating System :: MacOS :: MacOS X",
              ]

[project.urls]
"Homepage" = "https://github.com/MatthijsHak/MetalDock"
"Bug Tracker" = "https://github.com/MatthijsHak/MetalDock/issues"
