[metadata]
name = MetalDock
version = 1.0.0

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir=
    =src
install_requires =
    ase
    matplotlib
    openbabel
    pdb2pqr
    plams
    propka
    pygad
    rmsd

[options.packages.find]
where=src

[options.package_data]
example = path
* = README.md
