[metadata]
name = MetalDock
version = 1.0.1

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir=
    =src
install_requires =
    python >= 3.8.0
    mgltools
    rdkit 
    pdb2pqr    
    networkx
    numpy 
    ase
    plams

[options.packages.find]
where=src

[options.package_data]
example = path
* = README.md

[entry_points]
console_scripts =
    MetalDock = metal_dock:main
